# pymcma

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README_development_packaging.md  pyproject.toml  requirments.txt
pymcma/: .gitignore  cfg.py  crit.py  ctr_mca.py  cube.py  driver.py  ini_sol.py  mc_block.py  mcma.py  par_repr.py  plots.py  plots2.py  rd_inst.py  report.py  wrkflow.py
src/pyMCMA/: cfg.py  ctr_mca.py  driver.py  mcma.py  par_repr.py  plots.py
src/pyMCMA/Data/: Readme.txt
src/pyMCMA/Models/: Readme.txt
src/pyMCMA/wdir/anaTst/: payoff.txt
src/pyMCMA/wdir/anaTst/Results/: df_itr.csv  df_sol.csv  df_vars.csv
